--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 	<body>
 	<h1>This is an apple.</h1>
 	<img src="https://staticdelivery.nexusmods.com/mods/110/images/74627-0-1459502036.jpg" height="100" width="100"/>
-	<h2>Apples are red.</h2>
-	<h3>Always remember:</h3>
-		<p>An apple a day, keeps the doctor away!</p>
-	<a href = "https://en.wikipedia.org/wiki/Apple"><img src = "http://www.clipartkid.com/images/352/can-t-find-the-perfect-clip-art-I7EOWG-clipart.jpeg"height="42" width="42"></a>
+	<article>
+		<h2>Apples are red.</h2>
+		<h3>Always remember:</h3>
+			<p>An apple a day, keeps the doctor away!</p>
+			<a href = "https://en.wikipedia.org/wiki/Apple"><img src = "http://www.clipartkid.com/images/352/can-t-find-the-perfect-clip-art-I7EOWG-clipart.jpeg"height="42" width="42"></a>
+	</article>
 	</body>
   <footer>Date Modified: 1/10/2017</footer>
 </html>
