--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Practice webpage</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
   <header>This is a practice website</header>
 	<body>
