--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
 			<a href = "https://en.wikipedia.org/wiki/Apple"><img src = "http://www.clipartkid.com/images/352/can-t-find-the-perfect-clip-art-I7EOWG-clipart.jpeg"height="42" width="42"></a>
 	</article>
 	</body>
-  <footer>Date Modified: 1/10/2017</footer>
+  <footer>Date Modified: 1/10/2017	&copy Will Helt</footer>
 </html>
